--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,9 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-
-# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
-!/.mvn/wrapper/maven-wrapper.jar
-/target
-*.iml
+*/target
+*/*.iml
+/*.idea
 .idea
-/*/target/
+target/
+*/target/*
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
