--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: java
 jdk:
   - oraclejdk8
 script:
-  -cd tete
+  -cd practice-java8
   -mvn clean install
+script:
+  - cd email-broadcaster
+  - mvn clean install
